--- a/src/components/UserLinks/UserLinks.css
+++ b/src/components/UserLinks/UserLinks.css
@@ -1,7 +1,8 @@
 .user-links {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  margin-bottom: 20px;
 }
