--- a/src/templates/post.css
+++ b/src/templates/post.css
@@ -1,8 +1,10 @@
 .markdown-body {
   font-family: SourceSansPro, monospace;
-  margin-left: 10vw;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 4vh;
-  margin-right: 10vw;
+  max-width: 900px;
+  width: 80vw;
 }
 
 code[class*='language-'],
